--- a/salazarServiceV2/package.json
+++ b/salazarServiceV2/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://emarroquin1.github.io/SalazarServiceV2.0/",
   "name": "prueba1",
   "version": "0.1.0",
   "private": true,
